worked on chat function

--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,12 @@
                 <div class="row">
 
                     <div class="col-sm-4">
-                        <div class="card bg-black" style="text-align: center;">
+                        <div class="card bg-transparent">
                             <div class="card-header">
                                 <h4>About Me</h4>
                             </div>
                             <div class="card-body">
-                                <p>Name: Holly Sarah Sinclair</br>Age: 17</p>
+                                <p>Name: Holly Sarah Sinclair</br>Age: 17</br>Pronouns: She/Her</br>Birthday: 09/12/04</p>
                             </div>
                         </div>
                     </div>
@@ -51,51 +51,58 @@
 
                         <h4>Studies</h4>
                         <div id="accordion">
-                            <div class="card bg-black">
+
+                            <div class="card bg-transparent">
                                 <div class="card-header">
                                     <a class="btn" data-bs-toggle="collapse" href="#highSchool" style="color: inherit;">High School</a>
                                 </div>
-                                <div id="highSchool" class="collapse show" data-bs-parent="accordion">
+                                <div id="highSchool" class="collapse show" data-bs-parent="#accordion">
                                     <div class="card-body">
-                                        <h6>Park Mains High School</h6>
-                                        <p>Qualifications:</br>Advanced Higher Mathematics - A</br>Advanced Higher Biology - A</br>Higher Computer Science - A</br>Higher Music - A<br>Higher English - A</br>Higher Human Biology - A</br>National 5 Geography - A</br>National 5 Chemistry - A</p>
+                                        <p>I attended Park Mains High School in Erskine, Scotland. In my time there I participated in many commitees and societies including the concert band and eco commitee. I was also an organiser for the music forum in sixth year in addition to leading sectional rehersals with the flutes for the concert band.</p>
+                                        <div class="container-fluid">
+                                            <div class="row">
+                                                <div class="col-sm-6">
+                                                    <img src="park-mains.jpeg" alt="picture of park mains" style="width: 100%;" class="rounded">
+                                                    <small><a href="https://commons.wikimedia.org/wiki/File:Park_Mains_High_School.jpeg">creative commons image source</a></small>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <p>Qualifications:</br>Advanced Higher Mathematics - A</br>Advanced Higher Biology - A</br>Higher Computer Science - A</br>Higher Music - A<br>Higher English - A</br>Higher Human Biology - A</br>National 5 Geography - A</br>National 5 Chemistry - A</p>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card bg-black">
+                            <div class="card bg-transparent">
                                 <div class="card-header">
                                     <a class="collapsed btn" data-bs-toggle="collapse" href="#college" style="color: inherit;">College</a>
                                 </div>
-                                <div id="college" class="collapse" data-bs-parent="accordion">
+                                <div id="college" class="collapse" data-bs-parent="#accordion">
                                     <div class="card-body">
-                                        <h6>West College Scotland</h6>
-                                        <p>Qualifications:</br>Higher Psychology - A</p>
+                                        <p>While in sixth year of high school, i also attended West College Scotland at their Paisley campus to study Higher Psychology since this subject was not offered at my school. I achieved an A at the end of the year. Studying at college was a fun experience which gave me more insight on how I wanted to continue my studying in the future.</p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card bg-black">
+                            <div class="card bg-transparent">
                                 <div class="card-header">
                                     <a class="collapsed btn" data-bs-toggle="collapse" href="#rcs" style="color: inherit;">Royal Conservatoire of Scotland</a>
                                 </div>
-                                <div id="rcs" class="collapse" data-bs-parent="accordion">
+                                <div id="rcs" class="collapse" data-bs-parent="#accordion">
                                     <div class="card-body">
-                                        <h6>Piano</h6>
-                                        <h6>Flute</h6>
+                                        <p>From 2012 to 2022 I was a Junior at the Royal Conservatoire of Scotland. My first study is piano and my second study is flute, and I achieved Grade 8 (ABRSM) merits on both instruments during my time at RCS. I also participated in the concert band and laterly the wind orchestra. Learning instruments has taught me strict discipline and time management. </p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card bg-black">
+                            <div class="card bg-transparent">
                                 <div class="card-header">
                                     <a class="collapsed btn" data-bs-toggle="collapse" href="#university" style="color: inherit;">University</a>
                                 </div>
-                                <div id="university" class="collapse" data-bs-parent="accordion">
+                                <div id="university" class="collapse" data-bs-parent="#accordion">
                                     <div class="card-body">
-                                        <h6>The Open University</h6>
-                                        <p>Qualifications:</br>Technologies in Practice - Distinction (A)</p>
-                                        <h6>University of Aberdeen</h6>
+                                        
                                     </div>
                                 </div>
                             </div>
